Added impact page, contact page

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,45 @@
-<p>contact works!</p>
+<h1>Contact Us</h1>
+<div class="container">
+    <div class="contacts">
+        <h3>Keep in Touch with Us</h3>
+        <p><i class="fa-solid fa-phone-flip"></i>+254 792 791 586/ +254 729 303 826</p>
+        <p><i class="fa-regular fa-envelope"></i>infoupili.org</p>
+        <div class="handles">
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+        </div>
+    </div>
+    <div class="form">
+        <table>
+            <tr>
+                <td>
+                  <p>Your name<br>
+                  <input type="text">
+                  </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Your email<br>
+                    <input type="text">
+                    </p>
+                  </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Subject<br>
+                    <input type="text">
+                    </p>
+                  </td>
+            </tr>
+            <tr>
+                <td>
+                  <p>Your message (optional) <br>
+                  <textarea name="message" id="textarea"></textarea>
+                  </p>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
