--- a/src/app/impact/impact.component.html
+++ b/src/app/impact/impact.component.html
@@ -1,2 +1,52 @@
-<img src="homebg.png" alt="">
+<h1>Upili Impact</h1>
 
+<div class="container">
+    <div class="card" style="width: 20rem;">
+        <i class="fa-solid fa-heart"></i>
+        <div class="card-body">
+            <h6>Group Counseling</h6>
+            <p class="card-text">Using participant’s feedback <br>
+                gathered across time using standard <br>
+                depression and anxiety inventories <br>
+                will provide quantitative evidence of <br>
+                students improved mental health
+            </p>
+        </div>
+      </div>
+      <div class="card" style="width: 20rem;">
+        <i class="fa-solid fa-certificate"></i>
+        <div class="card-body">
+            <h6>Behavioral Improvement</h6>
+             <p class="card-text">Longitudinal data collected from <br>
+                school regarding improved <br>
+                classroom/social behavior with peers <br>
+                will demonstrate Upili’s role in <br>
+                supporting participant’s <br>
+                psychosocial path
+            </p>
+        </div>
+      </div>
+      <div class="card" style="width: 20rem;">
+        <i class="fa-solid fa-book"></i>
+        <div class="card-body">
+            <h6>Academic Improvement</h6>
+            <p class="card-text">Tracking participant’s grades and <br>
+                overall academic performance will <br>
+                indicate Upili’s role in advancing <br>
+                participant’s educational path
+            </p>
+        </div>
+      </div>
+      <div class="card" style="width: 20rem;">
+        <i class="fa-solid fa-people-group"></i>
+        <div class="card-body">
+            <h6>Number of Recipients</h6>
+            <p class="card-text">Tracking number of participants <br>
+                receiving our interventions <br>
+                will quantify Upili’s reach and help <br>
+                measure the expansion of our impact <br>
+                over time
+            </p>
+        </div>
+      </div>
+</div>
