--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -5,7 +5,9 @@ h1{
 
 .container{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10rem;
 }
 .form{
     display: flex;
